fix：修改body的overflow属性，增加editor插件

--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,10 @@
 	clear: both;
 }
 
+body {
+  overflow-x: hidden; 
+}
+
 header {
 	background: rgba(0, 0, 0, 0.2);
 }
